tests/invalid/lifetime/hrt_bound_leak.facet
fn bad<'x>(
    r: unrestricted &'x unrestricted isize,
    f: unrestricted for<'a, 'b> fn(unrestricted &'a unrestricted isize) -> unrestricted &'b unrestricted isize where 'a: 'b
) -> unrestricted () {
    let _ = (f r);
    ()
}
